@@ -14,5 +14,6 @@ int initPower(bus_t);
 int infoPower(bus_t bus, char *msg);
 int setPower(bus_t bus, int state, char *msg);
 int getPower(bus_t bus);
+int termPower(bus_t);
 
 #endif
